# sol-whir

./: .example.env  .gitignore  .gitmodules  LICENSE-MIT  README.md  foundry.toml  remappings.txt
script/: Counter.s.sol  Verify.s.sol
src/: FiatShamir.sol  MerkleVerifier.sol  Verifier.sol  Whir.sol  WhirStructs.sol
src/fs/: FiatShamir.sol  Pow.sol
src/merkle/: MerkleVerifier.sol
src/poly_utils/: Coeffs.sol  PolyUtils.sol
src/sumcheck/: Proof.sol
src/utils/: Logging.sol  Stir.sol  Utils.sol  WhirJson.sol
src/verifier_utils/: VerifierUtils.sol
test/: Coeffs.t.sol  FiatShamir.t.sol  MerkleVerifier.t.sol  Verifier.t.sol  WhirBaseTest.t.sol
test/data/bench/: bench.csv
test/data/whir/: .gitignore  proof_10_4_1_ConjectureList_0_ProverHelps.json  proof_10_4_1_ProvableList_0_ProverHelps.json  proof_10_4_1_UniqueDecoding_0_ProverHelps.json  proof_10_4_2_ConjectureList_0_ProverHelps.json  proof_10_4_2_ProvableList_0_ProverHelps.json  proof_10_4_2_UniqueDecoding_0_ProverHelps.json  proof_10_4_3_ConjectureList_0_ProverHelps.json  (+210 more)
test/fs/: FiatShamir.t.sol
test/merkle/: MerkleVerifier.t.sol
test/poly_utils/: Coeffs.t.sol  PolyUtils.t.sol
test/sumcheck/: Proof.t.sol
test/utils/: Utils.t.sol
whir-helper/: Cargo.toml  README.MD  proof_output.json  proof_output_1.json  proof_output_10_1.json  proof_output_10_10.json  proof_output_10_100.json  proof_output_20_1.json  proof_output_20_10.json  proof_output_3.json
whir-helper/examples/: generate_proof.rs
whir-helper/src/: hasher.rs  lib.rs  proof_converter.rs  proof_serde.rs
