[package]
name = "whir-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
whir = { git = "https://github.com/WizardOfMenlo/whir.git" }
ark-crypto-primitives = { version = "0.4", features = ["merkle_tree"] }
ark-ff = { version = "0.4", features = ["asm"] }
ark-serialize = "0.4"
ark-std = "0.4"
hex = "0.4"
rand = "0.8"
sha3 = "0.10"
nimue = { git = "https://github.com/arkworks-rs/nimue", features = ["ark"] }
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["parallel"]
parallel = [
    "dep:rayon",
    "ark-ff/parallel",
    "ark-crypto-primitives/parallel",
]
rayon = ["dep:rayon"]

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives" }
ark-test-curves = { git = "https://github.com/WizardOfMenlo/algebra", branch = "fft_extensions" }
ark-ff = { git = "https://github.com/WizardOfMenlo/algebra", branch = "fft_extensions" }
ark-poly = { git = "https://github.com/WizardOfMenlo/algebra", branch = "fft_extensions" }
ark-serialize = { git = "https://github.com/WizardOfMenlo/algebra", branch = "fft_extensions" }
ark-ec = { git = "https://github.com/WizardOfMenlo/algebra", branch = "fft_extensions" }

[[example]]
name = "generate_proof"